# systools

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  README.md  skills-lock.json
tools/mlxctl/: CONTEXT.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
tools/mlxctl/.impeccable/: design.json
tools/mlxctl/docs/: architecture.md  deployment-contract.md
tools/mlxctl/docs/research/: cli-tui-interaction-options.md  codex-0.144.1-oss-mode.md  mlx-server-apis.md  model-intelligence-fit-trust.md  optiq-0.3.3-sampling-compatibility.md  qwen36-sampling-profiles.md  runtime-model-cache-contracts.md
tools/mlxctl/prototypes/tui-workflows/: README.md  app.js  index.html  styles.css
tools/mlxctl/src/mlxctl/: adapters.py  config.py  control.py  daemon.py  dashboard.py  entrypoints.py  metrics.py  metrics_proxy.py  server_options.py  supervisor.py
tools/mlxctl/src/mlxctl/application/: __init__.py  catalogue.py  config_schema.py  dispatch.py  manager.py  setup.py
tools/mlxctl/src/mlxctl/domain/: __init__.py  admission.py  evidence.py  resources.py
tools/mlxctl/src/mlxctl/interfaces/: __init__.py  (+2 more)
tools/mlxctl/tests/: test_adapters.py  test_application_dispatch_v1.py  test_application_manager_v1.py  test_cli_v1.py  test_client_integrations_v1.py  test_composition_v1.py  test_config.py  test_config_schema_v1.py  test_config_store.py  test_control_client_v1.py  test_control_protocol_v1.py  test_dashboard_cli.py  test_domain_admission_v1.py  test_domain_evidence_v1.py  test_domain_resources_v1.py  test_entrypoints.py  test_gateway.py  test_gateway_credential_v1.py  test_gateway_runtime_v1.py  test_host_integration_v1.py  test_launchd_v1.py  test_local_backend_v1.py  test_model_intelligence_v1.py  test_model_profiles_v1.py  test_model_supply.py  test_operation_catalogue_v1.py  test_operation_ports_v1.py  test_paths_v1.py  test_production_v1.py  test_runtime_supply.py  test_setup_port_v1.py  test_setup_v1.py  test_state_store.py  test_supervisor_v1.py  test_supply_ports_v1.py  test_system_adapters_v1.py  test_tui_v1.py
(+98 files in other folders)
