[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxctl"
version = "0.1.0"
description = "Manage local MLX inference servers"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ivan D Vasin" }]
dependencies = [
  "psutil>=7.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
mlxctl = "mlxctl.cli:main"
mlxd = "mlxctl.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlxctl"]
