[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxctl"
version = "0.1.0"
description = "Manage local MLX inference servers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ivan D Vasin" }]
dependencies = [
  "httpx>=0.28,<1",
  "huggingface-hub>=0.33,<1",
  "psutil>=7.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "rich>=14,<15",
  "starlette>=0.47,<1",
  "textual>=6,<7",
  "tomlkit>=0.13,<1",
  "typer>=0.16,<1",
]

[project.scripts]
mlxctl = "mlxctl.cli:main"
mlxd = "mlxctl.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlxctl"]
