[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxctl"
version = "0.1.0"
description = "Manage local MLX inference servers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ivan D Vasin" }]
dependencies = [
  "httpx>=0.28,<1",
  "huggingface-hub>=1.0,<2",
  "psutil>=7.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "rich>=14,<15",
  "starlette>=0.47,<1",
  "textual>=6,<7",
  "tomlkit>=0.13,<1",
  "typer>=0.16,<1",
  "uvicorn>=0.35,<1",
]

[project.scripts]
mlxctl = "mlxctl.entrypoints:cli_main"
mlxd = "mlxctl.entrypoints:daemon_main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlxctl"]
